--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,68 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.nav{
+  min-height: 40px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 1px whitesmoke;
+  background-color: #505451;
+}
+
+.logo{
+  color: white;
+}
+
+.nav ul{
+  display: flex;
+  list-style-type: none;
+  margin-left: auto;
+}
+
+.nav ul li{
+  width: 60px;
+  padding:0px 20px;
+}
+
+.nav h4 a{
+  text-decoration: none;
+  color: #a8d2f0;
+}
+
+.container{
+  background-color: blanchedalmond;
+  min-height: 420px;
+  padding: 30px;
+  background-image: url(./logo.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.container ol{
+  margin-top: 20px;
+  margin-left: 50px;
+  font-size: 1.2em;
+  line-height: 30px;
+  
+}
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: darkslategray;
+}
+
+.footer div{
+  margin: 20px;
+  color: wheat;
+  text-align: center;
+}
+
+.footer div a{
+  text-decoration: none;
+  color: #3088c7;
 }
